Fix(Pagination): Remove oversized top-padding and add missing elements (TS-3267) (#1764)
* Fix(Pagination): Remove oversized top-padding and add missing elements (TS-3267)

Search results were displaying excessive whitespace between the layout flow and the paginator component, fix that.
Add the missing results text to under pagination
Fix Pagination elements text not being bolded

* Remove query text from PackageCount

As this is not by designs

--- a/apps/cyberstorm-remix/app/commonComponents/PackageSearch/PackageSearch.css
+++ b/apps/cyberstorm-remix/app/commonComponents/PackageSearch/PackageSearch.css
@@ -46,11 +46,17 @@
 
   .package-search__pagination {
     display: flex;
-    gap: var(--gap-2xs);
+    flex-direction: column;
+    gap: var(--gap-xl);
     align-items: center;
     align-self: stretch;
     justify-content: center;
-    padding-top: var(--space-40);
+    padding: var(--space-48) 0;
+    color: var(--color-text-tertiary);
+    font-weight: var(--font-weight-regular);
+
+    font-size: var(--font-size-body-md);
+    line-height: var(--line-height-md);
 
     > .skeleton {
       width: 100%;
