--- a/packages/cyberstorm/src/newComponents/Pagination/Pagination.css
+++ b/packages/cyberstorm/src/newComponents/Pagination/Pagination.css
@@ -5,7 +5,6 @@
   gap: var(--pagination-gap);
   align-items: center;
   justify-content: center;
-  padding-top: 4.5rem;
   list-style: none;
 }
 
